salesforce/force-app/main/default/objects/D360_Goal_Pack__c/D360_Goal_Pack__c.object-meta.xml
<CustomObject>
    <description>Reusable business goal template powered by trusted Data360 context.</description>
    <label>D360 Goal Pack</label>
    <nameField>
        <label>Goal Pack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D360 Goal Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>