salesforce/force-app/main/default/objects/D360_Goal_Pack__c/fields/Allowed_Actions__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Actions__c</fullName>
    <label>Allowed Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>