salesforce/force-app/main/default/objects/D360_Goal_Pack__c/fields/Business_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Business_Outcome__c</fullName>
    <label>Business Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>