salesforce/force-app/main/default/objects/D360_Goal_Pack__c/fields/Required_Signals__c.field-meta.xml
<CustomField>
    <fullName>Required_Signals__c</fullName>
    <label>Required Signals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>