salesforce/force-app/main/default/objects/D360_Goal_Pack__c/fields/Success_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics__c</fullName>
    <label>Success Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>