salesforce/force-app/main/default/objects/D360_Goal_Pack__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Persona__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Goal Packs</label>
</ListView>